--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <title>Portofolio</title>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
-<body>
-    Header part
-    <header class="flex justify-between px-20 py-8">
-        <h1>Irakoze Ritha</h1>
+<body class="bg-slate-900">
+    <!-- Header part -->
+    <header class="flex items-center justify-between px-4 sm:px-8 lg:px-20 py-4 sm:py-6 lg:py-12 bg-slate-950 text-white" >
+        <h1 class="text-xl font-bold text-blue-600">Ritha</h1>
         <nav>
             
-            <ul>
+            <ul class="flex gap-9">
                 <li><a href="#Home">Home</a></li>
                 <li><a href="#About Me">About Me</a></li>
                 <li><a href="Services">Services</a></li>
