Hero section, creating home.

--- a/index.html
+++ b/index.html
@@ -13,12 +13,19 @@
         <nav>
             
             <ul class="flex gap-9">
-                <li><a href="#Home">Home</a></li>
-                <li><a href="#About Me">About Me</a></li>
-                <li><a href="Services">Services</a></li>
-                <li><a href="Contact">Contact</a></li>
+                <li class="hover:text-blue-400 px-5 py-3 mx-1 active"><a href="#Home">Home</a></li>
+                <li class="hover:text-blue-400 px-5 py-3 mx-1"><a href="#About Me">About Me</a></li>
+                <li class="hover:text-blue-400 px-5 py-3 mx-1"><a href="Services">Services</a></li>
+                <li class="hover:text-blue-400 px-5 py-3 mx-1"><a href="Contact">Contact</a></li>
             </ul>
         </nav>
     </header>
+    <!-- Hero Section -->
+    <Section id="Home" class="pt-24 pb-16 px-20 min-h-screen flex ">
+        <div class="pt-13 w-full lg:w-auto transition-all-duration-500 py-32">
+            <p class="text-3xl text-white xxs:text-xl sm:max-xl:text-5xl xl:text-6xl font-serif w-full" >Hello, I'm Ritha</p>
+            <p class="mt-6 text-gray-400">I'm a front-end Developer and Data Analyst <br>I design, code, and analyze data to create user-friendly and insightful experiences.</p>
+        </div>
+    </Section>
 </body>
 </html>
