--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="flex justify-between items-center py-4">
             <p class=" font-serif text-xl font-bold text-gray-600">Ritha</p> 
             <ul class="flex space-x-8 ">
-                <li class="hover:text-green-700 transition-colors"><a href="#">Home</a></li>
+                <li class="hover:text-green-700 transition-colors"><a href="#Home">Home</a></li>
                 <li class="hover:text-green-700 transition-colors"><a href="#AboutMe">About Me</a></li>
                 <li class="hover:text-green-700 transition-colors"><a href="#Portofolio">Portofolio</a></li>
                 <li Class="hover:text-green-700 transition-colors"><a href="#Skills">Skills</a></li>
@@ -255,5 +255,78 @@
     </section>
 
 </section>
+<!-- Contact section -->
+    <section id="Contact" class="py-20 bg-neutral-light">
+        <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8">
+            <div class="text-center mb-16">
+                <h2 class="font-heading text-4xl md:text-5xl font-bold text-gray-600 font-serif mb-6">Let's Work Together</h2>
+                <p class="text-l text-gray-600 max-w-3xl mx-auto text-pretty">
+                    Ready to bring your ideas to life with data-driven frontend solutions? Let's connect!
+                </p>
+            </div>
+            
+            <div class="bg-white rounded-lg shadow-lg p-8">
+                <form class="space-y-6">
+                    <div class="grid md:grid-cols-2 gap-6">
+                        <div>
+                            <label for="name" class="block text-sm font-semibold text-neutral-dark mb-2">Full Name</label>
+                            <input type="text" id="name" name="name" class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-primary focus:border-transparent" placeholder="Your full name">
+                        </div>
+                        <div>
+                            <label for="email" class="block text-sm font-semibold text-neutral-dark mb-2">Email Address</label>
+                            <input type="email" id="email" name="email" class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-primary focus:border-transparent" placeholder="your.email@example.com">
+                        </div>
+                    </div>
+                    <div>
+                        <label for="subject" class="block text-sm font-semibold text-neutral-dark mb-2">Subject</label>
+                        <input type="text" id="subject" name="subject" class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-primary focus:border-transparent" placeholder="Project inquiry, collaboration, etc.">
+                    </div>
+                    <div>
+                        <label for="message" class="block text-sm font-semibold text-neutral-dark mb-2">Message</label>
+                        <textarea id="message" name="message" rows="6" class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-primary focus:border-transparent" placeholder="Tell me about your project or how we can work together..."></textarea>
+                    </div>
+                    <div class="text-center">
+                        <button type="submit" class="bg-green-800 text-white px-8 py-3 rounded-lg hover:bg-green-700 transition-colors font-semibold">
+                            Send Message
+                        </button>
+                    </div>
+                </form>
+            </div>
+
+            <!-- Contact Info -->
+            <div class="mt-12 text-center">
+                <div class="flex flex-col sm:flex-row justify-center items-center space-y-4 sm:space-y-0 sm:space-x-8">
+                    <div class="flex items-center space-x-2">
+                        <svg class="w-5 h-5 text-primary" fill="currentColor" viewBox="0 0 24 24">
+                            <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/>
+                        </svg>
+                        <a href="https://mail.google.com/mail/u/0/" class="hover:text-green-900">irakozeritha20@gmail.com</a>
+                    </div>
+                    <div class="flex items-center space-x-2">
+                        <svg class="w-5 h-5 text-primary" fill="currentColor" viewBox="0 0 24 24">
+                            <path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/>
+                        </svg>
+                        <a href="https://www.linkedin.com/" class="hover:text-green-900">linkendin</a>
+                    </div>
+                    <div class="flex items-center space-x-2">
+                        <svg class="w-5 h-5 text-primary" fill="currentColor" viewBox="0 0 24 24">
+                            <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
+                        </svg>
+                        <a href="https://github.com/" class="hover:text-green-900">Github profile</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="bg-green-950 text-gray-800 py-8">
+        <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
+            <p class="text-zinc-300">
+                @2024 Irakoze Ritha Theonestine <br>Crafted with passion for beautiful, data-driven web experiences.
+            </p>
+        </div>
+    </footer>
+
 </body>
 </html>
