--- a/index.html
+++ b/index.html
@@ -24,10 +24,20 @@
     </header>
     <!-- Hero Section -->
     <Section id="Home" class="pt-24 pb-16 px-20 min-h-screen flex ">
-        <div class="pt-13 w-full lg:w-auto transition-all-duration-500 py-32">
+        <div class="pt-13 w-full lg:w-auto transition-all-duration-500 py-32"> 
+            <div class="flex flex-row gap-80">
+            <div>
             <p class="text-3xl xxs:text-xl sm:max-xl:text-5xl xl:text-6xl font-serif w-full" >Hello, I'm Ritha</p>
-            <p class="mt-6">I'm a front-end Developer and Data Analyst <br>I design, code, and analyze data to create user-friendly and insightful experiences.</p>
-          <img src="./images/img.jpg" class="rounded-lg shadow-lg w-96 h-auto">  
+            <p class="mt-6">I'm a front-end Developer and Data Analyst <br>I design code, and analyze data to create user-friendly and insightful experiences.</p>
+            <p>am passionate about blending technology and creativity to 
+                solve real-world problems. My journey started with curiosity in data and 
+                grew into building meaningful digital solutions through frontend 
+                development and analytics.</p>
+            </div>
+            <div>
+          <img src="./images/img.jpg" class="rounded-lg shadow-lg w-56 lg:w-64 h-80 lg:h-[400px] object-cover"> 
+             </div> 
+            </div>
           <div class="mt-10 flex flex-col sm:flex-row gap-4">
             <a href="#Portofolio" class="bg-green-800 rounded-lg px-8 py-3 hover:bg-green-700 transition colors font-semibold text-white">View My Work</a>
             <a href="#Contact" class="text-green-800 border-2 border-primary px-8 py-3 hover:bg-green-800 hover:text-white rounded-lg font-semibold transition colors">Get In Touch</a>
@@ -136,7 +146,7 @@
                 <div class="p-6">
                     <h3 class="font-heading text-xl font-bold text-neutral-dark mb-3">Hackathon Winner</h3>
                     <p class="text-gray-600 mb-2 leading-relaxed h-32">
-                        Completed 5 days of Data of training and mentorship in Data Science techniques to turn complex datasets into actioanble inssights.</p>
+                        Completed 5 days of Data of training and mentorship in Data Science techniques to turn complex datasets into actionable insights.</p>
                     </div>
                 </div>
             </div>
@@ -173,7 +183,7 @@
                                 <span class="text-black">65%</span>
                             </div>
                             <div class="w-full bg-gray-200 rounded-full h-2">
-                                <div class="bg-green-800 h-2 rounded-full" style="width: 85%"></div>
+                                <div class="bg-green-800 h-2 rounded-full" style="width: 65%"></div>
                             </div>
                         </div>
                         <div>
@@ -188,10 +198,10 @@
                         <div>
                             <div class="flex justify-between mb-2">
                                 <span class="font-semibold">Next.js</span>
-                                <span class="text-black">75%</span>
+                                <span class="text-black">50%</span>
                             </div>
                             <div class="w-full bg-gray-200 rounded-full h-2">
-                                <div class="bg-green-800 h-2 rounded-full" style="width: 75%"></div>
+                                <div class="bg-green-800 h-2 rounded-full" style="width: 50%"></div>
                             </div>
                         </div>
                     </div>
@@ -206,7 +216,7 @@
                                 <span class="font-semibold">Statistical Analysis</span>
                                 <span>95%</span>
                             </div>
-                            <div class="w-full bg-white/20 rounded-full h-2">
+                            <div class="w-full bg-gray-200 rounded-full h-2">
                                 <div class="bg-green-800 h-2 rounded-full" style="width: 95%"></div>
                             </div>
                         </div>
@@ -215,7 +225,7 @@
                                 <span class="font-semibold">Data Visualization</span>
                                 <span>90%</span>
                             </div>
-                            <div class="w-full bg-white/20 rounded-full h-2">
+                            <div class="w-full bg-gray-200 rounded-full h-2">
                                 <div class="bg-green-800 h-2 rounded-full" style="width: 90%"></div>
                             </div>
                         </div>
@@ -224,7 +234,7 @@
                                 <span class="font-semibold">Python/R</span>
                                 <span>80%</span>
                             </div>
-                            <div class="w-full bg-white/20 rounded-full h-2">
+                            <div class="w-full bg-gray-200 rounded-full h-2">
                                 <div class="bg-green-800 h-2 rounded-full" style="width: 80%"></div>
                             </div>
                         </div>
@@ -233,7 +243,7 @@
                                 <span class="font-semibold">Actuarial Modeling</span>
                                 <span>85%</span>
                             </div>
-                            <div class="w-full bg-white/20 rounded-full h-2">
+                            <div class="w-full bg-gray-200 rounded-full h-2">
                                 <div class="bg-green-800 h-2 rounded-full" style="width: 85%"></div>
                             </div>
                         </div>
