styling the home page

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
     <Section id="Home" class="pt-24 pb-16 px-20 min-h-screen flex ">
         <div class="pt-13 w-full lg:w-auto transition-all-duration-500 py-32"> 
             <div class="flex flex-row gap-80">
-            <div>
-            <p class="text-3xl xxs:text-xl sm:max-xl:text-5xl xl:text-6xl font-serif w-full" >Hello, I'm Ritha</p>
-            <p class="mt-6">I'm a front-end Developer and Data Analyst <br>I design code, and analyze data to create user-friendly and insightful experiences.</p>
+            <div class="space-y-6">
+            <p class="text-3xl xxs:text-xl sm:max-xl:text-5xl xl:text-6xl font-serif w-full" >Hello, <span class="text-green-700">I'm Ritha</span></p>
+            <p class="text-xl sm:text-2xl text-gray-600 font-light leading-relaxed">I'm a <span class="font-semibold text-green-700">front-end Developer</span> and <span class="font-semibold text-green-700">Data Analyst</span>I design, code,<br>analyze data to create user-friendly and insightful experiences.</p>
             <p>am passionate about blending technology and creativity to 
-                solve real-world problems. My journey started with curiosity in data and 
-                grew into building meaningful digital solutions through frontend 
+                solve <br>real-world problems. My journey started with curiosity in data <br> and 
+                grew into building meaningful digital solutions <br>through frontend 
                 development and analytics.</p>
             </div>
             <div>
