no change made just correction

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="bg-slate-50 text-gray-600">
     <!-- Header part -->
-    <header class="fixed top-0 w-full bg-white backdrop-blur-sm z-50 border-b border-gray-200" >
+    <header class="fixed top-0 w-full bg-white backdrop-blur-sm z-50 border-b border-gray-200 dark: bg-gray-300" >
         <nav class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between items-center py-4">
             <p class=" font-serif text-xl font-bold text-gray-600">Ritha</p> 
@@ -20,6 +20,7 @@
                 <li class="hover:text-green-700 transition-colors"><a href="#Contact">Contact</a></li>
             </ul>
         </div>
+        
         </nav>
     </header>
      <!-- Hero Section -->
@@ -50,7 +51,7 @@
                 
                 <!-- Image -->
                 <div class="flex justify-center lg:justify-end flex-shrink-0">
-                    <img src="./images/img.jpg" 
+                    <img src="./images/img.jpg"
                          class="rounded-lg shadow-lg w-56 sm:w-64 lg:w-64 h-80 lg:h-[400px] object-cover">
                 </div>
             </div>
